Successfully introduced threading, separating tics from the draw cycle. Switched from JAVA2D to P2D, which is MUCH faster.